Fixed WriteAccountNumberTest